# Call-Me-Maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
src/: __init__.py  __main__.py  call_me_maybe.py  constrained_decoder.py  constrained_decoding.py  parser.py  schemas.py
