[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }

[tool.mypy]
mypy_path = "llm_sdk"
